5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1716_2506.log
== TEST (2019-05-14 17:38:53) 
-- CODE:
anos = 0 
quant = float(input("Quant "))
porcc = int(input("Porce "))/100
porcr = float(input("DEcresA "))/100

while (12000 > quant > 0 ):
	xx1 = quant * porcc
	quant = quant - xx1
	xx2 = quant * porcd
	anos = anos + 1
	print(quant)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    xx2 = quant * porcd
NameError: name 'porcd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:39:09) 
-- CODE:
anos = 0 
quant = float(input("Quant "))
porcc = int(input("Porce "))/100
porcr = float(input("DEcresA "))/100

while (12000 > quant > 0 ):
	xx1 = quant * porcc
	quant = quant - xx1
	xx2 = quant * porcr
	anos = anos + 1
	print(quant)

-- OUTPUT:
1159.96
1090.3624
1024.940656
963.44421664
905.6375636416001
851.2993098231041
800.2213512337178
752.2080701596947
707.075585950113
664.6510507931063
624.7719877455199
587.2856684807888
552.0485283719414
518.9256166696249
487.79007966944744
458.5226748892806
431.01131439592376
405.15063553216834
380.84159740023824
357.99110155622395
336.5116354628505
316.32093733507946
297.3416810949747
279.50118022927626
262.73110941551965
246.96724285058846
232.14920827955316
218.22025578278
205.1270404358132
192.81941800966442
181.25025292908455
170.3752377533395
160.15272348813912
150.54356007885076
141.51094647411972
133.02028968567254
125.03907230453218
117.53672796626026
110.48452428828465
103.85545283098757
97.62412566112832
91.76667812146061
86.26067743417298
81.0850367881226
76.21993458083524
71.64673850598513
67.34793419562602
63.30705814388846
59.50863465525515
55.938116575939844
52.58182958138345
49.42691980650044
46.46130461811042
43.67362634102379
41.05320876056236
38.59001623492862
36.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:39:29) 
-- CODE:
anos = 0 
quant = float(input("Quant "))
porcc = int(input("Porce "))/100
porcr = float(input("DEcresA "))/100

while (12000 > quant > 0 ):
	xx1 = quant * porcc
	quant = quant - xx1
	xx2 = quant * porcr
	anos = anos + 1
print(quant)

-- OUTPUT:
1159.96
1090.3624
1024.940656
963.44421664
905.6375636416001
851.2993098231041
800.2213512337178
752.2080701596947
707.075585950113
664.6510507931063
624.7719877455199
587.2856684807888
552.0485283719414
518.9256166696249
487.79007966944744
458.5226748892806
431.01131439592376
405.15063553216834
380.84159740023824
357.99110155622395
336.5116354628505
316.32093733507946
297.3416810949747
279.50118022927626
262.73110941551965
246.96724285058846
232.14920827955316
218.22025578278
205.1270404358132
192.81941800966442
181.25025292908455
170.3752377533395
160.15272348813912
150.54356007885076
141.51094647411972
133.02028968567254
125.03907230453218
117.53672796626026
110.48452428828465
103.85545283098757
97.62412566112832
91.76667812146061
86.26067743417298
81.0850367881226
76.21993458083524
71.64673850598513
67.34793419562602
63.30705814388846
59.50863465525515
55.938116575939844
52.58182958138345
49.42691980650044
46.46130461811042
43.67362634102379
41.05320876056236
38.59001623492862
36.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:39:43) 
-- CODE:
anos = 0 
quant = float(input("Quant "))
porcc = int(input("Porce "))/100
porcr = float(input("DEcresA "))/100

while (12000 > quant > 0 ):
	xx1 = quant * porcc
	quant = quant - xx1
	xx2 = quant * porcr
	anos = anos + 1
print(quant)

-- OUTPUT:
1159.96
1090.3624
1024.940656
963.44421664
905.6375636416001
851.2993098231041
800.2213512337178
752.2080701596947
707.075585950113
664.6510507931063
624.7719877455199
587.2856684807888
552.0485283719414
518.9256166696249
487.79007966944744
458.5226748892806
431.01131439592376
405.15063553216834
380.84159740023824
357.99110155622395
336.5116354628505
316.32093733507946
297.3416810949747
279.50118022927626
262.73110941551965
246.96724285058846
232.14920827955316
218.22025578278
205.1270404358132
192.81941800966442
181.25025292908455
170.3752377533395
160.15272348813912
150.54356007885076
141.51094647411972
133.02028968567254
125.03907230453218
117.53672796626026
110.48452428828465
103.85545283098757
97.62412566112832
91.76667812146061
86.26067743417298
81.0850367881226
76.21993458083524
71.64673850598513
67.34793419562602
63.30705814388846
59.50863465525515
55.938116575939844
52.58182958138345
49.42691980650044
46.46130461811042
43.67362634102379
41.05320876056236
38.59001623492862
36.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:44:15) 
-- CODE:
anos = 0 
quant = float(input("Quant "))
porcc = int(input("Porce "))/100
porcr = float(input("DEcresA "))/100

while (12000 > quant > 0 ):
	xx1 = quant * porcc
	quant = quant - xx1
	quant = quant - porcr
	anos = anos + 1
	if quant <= 0:
		print("EXTINCAO")
	else :
		print("LIMITE")
print(anos)		


-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
EXTINCAO
66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:45:04) 
-- CODE:
anos = 0 
quant = float(input("Quant "))
porcc = int(input("Porce "))/100
porcr = float(input("Retirada  "))/100

while (12000 > quant > 0 ):
	xx1 = quant * porcc
	quant = quant - xx1
	quant = quant - porcr
	anos = anos + 1
	if quant <= 0:
		print("EXTINCAO")
	else :
		print("LIMITE")
print(anos)		


-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
EXTINCAO
66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:45:44) 
-- CODE:
anos = 0 
quant = float(input("Quant "))
porcc = int(input("Porce "))/100
porcr = float(input("Retirada  "))/100

while (12000 > quant > 0 ):
	xx1 = quant * porcc
	quant = quant - xx1
	quant = quant - porcr
	anos = anos + 1
	if quant <= 0:
		print("EXTINCAO")
	else :
		print("LIMITE")
print(anos)		


-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
EXTINCAO
66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:46:09) 
-- CODE:
anos = 0 
quant = float(input("Quant "))
porcc = int(input("Porce "))/100
porcr = float(input("Retirada  "))/100

while (12000 > quant > 0 ):
	xx1 = quant * porcc
	quant = quant - xx1
	quant = quant - porcr
	anos = anos + 1
	if quant <= 0:
		print("EXTINCAO")
	else :
		print("LIMITE")
print(anos)		


-- EXECUTION TIME:
0.136013
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
EXTINCAO
66
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
EXTINCAO
15
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
EXTINCAO
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:46:55) 
-- CODE:
anos = 0 
quant = float(input("Quant "))
porcc = int(input("Porce "))/100
porcr = float(input("Retirada  "))/100

while (12000 > quant > 0 ):
	xx1 = quant * porcc
	quant = quant + xx1
	quant = quant - porcr
	anos = anos + 1
	if quant <= 0:
		print("EXTINCAO")
	else :
		print("LIMITE")
print(anos)		


-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:47:34) 
-- CODE:
anos = 0 
quant = float(input("Quant "))
porcc = int(input("Porce "))/100
porcr = float(input("Retirada  "))

while (12000 > quant > 0 ):
	xx1 = quant * porcc
	quant = quant + xx1
	quant = quant - porcr
	anos = anos + 1
	if quant <= 0:
		print("EXTINCAO")
	else :
		print("LIMITE")
print(anos)		


-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:47:49) 
-- CODE:
anos = 0 
quant = float(input("Quant "))
porcc = int(input("Porce "))/100
porcr = float(input("Retirada  "))

while (12000 > quant > 0 ):
	xx1 = quant * porcc
	quant = quant + xx1
	quant = quant - porcr
	anos = anos + 1
	if quant <= 0:
		print("EXTINCAO")
	else :
		print("LIMITE")
print(anos)		


-- EXECUTION TIME:
0.163142
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:48:17) 
-- CODE:
anos = 0 
quant = float(input("Quant "))
porcc = int(input("Porce "))/100
porcr = float(input("Retirada  "))

while (12000 > quant > 0 ):
	xx1 = quant * porcc
	quant = quant + xx1
	quant = quant - porcr
	anos = anos + 1
	if (quant <= 0):
		print("EXTINCAO")
	else :
		print("LIMITE")
print(anos)		


-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:33) 
-- CODE:
anos = 0 
quant = float(input("Quant "))
porcc = int(input("Porce "))/100
porcr = float(input("Retirada  "))

while (12000 > quant > 0 ):
	xx1 = quant * porcc
	quant = quant + xx1
	quant = quant - porcr
	anos = anos + 1
	if (quant <= 0):
		print("EXTINCAO")
	else :
		print("LIMITE")
print(anos)		


-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:34) 
-- CODE:
anos = 0 
quant = float(input("Quant "))
porcc = int(input("Porce "))/100
porcr = float(input("Retirada  "))

while (12000 > quant > 0 ):
	xx1 = quant * porcc
	quant = quant + xx1
	quant = quant - porcr
	anos = anos + 1
	if (quant <= 0):
		print("EXTINCAO")
	else :
		print("LIMITE")
print(anos)		


-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:50:24) 
-- CODE:
anos = 0 
quant = float(input("Quant "))
porcc = int(input("Porce "))/100
porcr = float(input("Retirada  "))

while ( 0 < quant < 12000 ):
	xx1 = quant * porcc
	quant = quant + xx1
	quant = quant - porcr
	anos = anos + 1
	if (quant <= 0):
		print("EXTINCAO")
	else :
		print("LIMITE")
print(anos)		


-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
